# python-template

./: .gitignore  cookiecutter.json
{{cookiecutter.micro_service_name}}/: .dockerignore  Makefile  README.md  pyproject.toml  ruff.toml
{{cookiecutter.project_name}}/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/: .gitignore
