# template/{{cookiecutter.micro_service_name}}/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.micro_service_name}}"
version = "0.1.0"
description = "{{cookiecutter.micro_service_name}}"
requires-python = ">=3.12"

dependencies = [
    "python-dotenv>=1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.15",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]